--- a/apps/staging.yaml
+++ b/apps/staging.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: helm
+      chart: kubernetes-yml-files
       sourceRef:
         kind: GitRepository
         name: app-source
