--- a/apps/kafka.yaml
+++ b/apps/kafka.yaml
@@ -2,15 +2,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: app-staging
+  name: cp-kafka-connect
   namespace: flux-system
 spec:
   chart:
     spec:
-      chart: kubernetes-yml-files
+      chart: cp-kafka-connect
       sourceRef:
         kind: GitRepository
-        name: app-source
-  interval: 30s
-  targetNamespace: staging
+        name: kafka-community-edition
+      version: 0.1.0
+  interval: 10m0s
 
