--- a/apps/kafka-community-edition-rel.yaml
+++ b/apps/kafka-community-edition-rel.yaml
@@ -2,15 +2,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: kafka-community-edition-rel
+  name: helmrelease
   namespace: flux-system
 spec:
   chart:
     spec:
       chart: cp-helm-charts
       sourceRef:
-        kind: HelmRepository
-        name: staging
-  interval: 30s
-  targetNamespace: staging
+        kind: GitRepository
+        name: confluentinc
+      version: 0.6.0
+  interval: 10m0s
 
